--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@types/chai": "^4.3.20",
     "@types/chai-as-promised": "^8.0.2",
     "@types/mocha": "^10.0.10",
-    "@types/node": "^22.18.11",
+    "@types/node": "^22.18.12",
     "chai": "^5.3.3",
     "ethers": "^6.15.0",
     "forge-std": "github:foundry-rs/forge-std#v1.9.4",
@@ -19,6 +19,7 @@
   "dependencies": {
     "@openzeppelin/contracts": "^5.4.0",
     "@tailwindcss/vite": "^4.1.14",
+    "dotenv": "^17.2.3",
     "tailwindcss": "^4.1.14"
   }
 }
