--- a/app/package.json
+++ b/app/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "lucide-react": "^0.546.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
